Added FontAwesome Icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <title>COVID TRACKER FOR PH AND JPN</title>
 </head>
@@ -110,11 +111,11 @@
     <div class="container">
       <div class="about">
         <div>
-          <p>This Covid-19 Tracker is a micro-project created by KHAEL using Covid-19 API. Thanks to <a href="https://github.com/javieraviles/covidAPI" target="__blank">JavieRaviles</a> for the Free Covid-19 API .</p>
+          <p>This Covid-19 Tracker is a micro-project created by KHAEL using <a href="https://github.com/javieraviles/covidAPI" target="__blank">Covid-19 API</a></p>
         </div>
         <div class="contact">
-          <a href="" target="__blank" disabled><i class="bi bi-globe2"></i> PORTFOLIO</a>
-          <a href="https://github.com/i-am-Khael/" target="__blank"><i class="bi bi-github"></i> GITHUB</a>
+          <a href="https://michaelcasals.ml/" target="__blank" disabled><i class="fa-solid fa-globe"></i> PORTFOLIO</a>
+          <a href="https://github.com/i-am-Khael/" target="__blank"><i class="fa-brands fa-github"></i> GITHUB</a>
         </div>
       </div>
     </div>
